# sftp_utils

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
gats/: __init__.py  utils.py
gats/client/: client.py
gats/cmd/: main.py  parser_data.json
gats/cmd/subcommands/sftp/: update_remote.py
gats/config/: __init__.py  config.py
gats/server/: __init__.py  commands.py  server.py
gats/ssh/: __init__.py  paramiko.py
