[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'gats'
description = 'gats'
authors = [{name = 'Jonas Castro', email = 'jonasalves15@live.com'}]
requires-python = '>=3.7'
readme = {file = 'README.md', content-type = 'text/markdown'}
dependencies = [
  'bcrypt == 4.0.1',
  'cffi == 1.15.1',
  'colorama == 0.4.6',
  'cryptography == 40.0.2',
  'paramiko == 3.1.0',
  'psutil == 5.9.5',
  'pycparser == 2.21',
  'PyNaCl == 1.5.0',
  'func-colors == 0.1.1'
]
dynamic = ['version']

[project.optional-dependencies]
test = ['pytest', 'flake8']

[project.scripts]
gats = 'gats.cmd.main:main'